fix features mobile align

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -252,6 +252,7 @@ $break-phone: 320
 
   .feature
     text-align: center
+    min-height: 200px
   +min-screen($break-tablet)
     .features-in
       position: relative
